associated S.O.D's to left/right admissible subcats

--- a/commands.tex
+++ b/commands.tex
@@ -1,6 +1,8 @@
 \usepackage{tcolorbox}
 \tcbuselibrary{theorems}
 
+\usepackage{quiver}
+
 \usepackage{pgfplots}
 \pgfplotsset{width=\columnwidth,compat=1.13}
 
