--- a/main.tex
+++ b/main.tex
@@ -31,15 +31,10 @@
 
 \input{cover.tex}
 
-\input{intro.tex}
-\newpage
 \input{body.tex}
+
 \newpage
-\input{conclusion.tex}
-%\newpage
-%\input{appendix.tex}
-\newpage
-\emergencystretch=1em
+\sloppy
 \printbibliography
 
 \end{document}
