more detail in proofs for cubic fourfolds

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -423,3 +423,38 @@ note = {(Accessed on 04/16/2024)}
 
 
 }
+
+
+@article{bridgeland_equivalences_1999,
+    shorthand = {Bri99},
+	title = {Equivalences of {Triangulated} {Categories} and {Fourier}-{Mukai} {Transforms}},
+	volume = {31},
+	copyright = {http://doi.wiley.com/10.1002/tdm\_license\_1},
+	issn = {00246093},
+	url = {http://doi.wiley.com/10.1112/S0024609398004998},
+	doi = {10.1112/S0024609398004998},
+	language = {en},
+	number = {1},
+	urldate = {2024-04-18},
+	journal = {Bulletin of the London Mathematical Society},
+	author = {Bridgeland, Tom},
+	month = jan,
+	year = {1999},
+	pages = {25--34},
+}
+
+@misc{bondal_semiorthogonal_1995,
+    shorthand = {BonOrl95},
+	title = {Semiorthogonal decomposition for algebraic varieties},
+	url = {http://arxiv.org/abs/alg-geom/9506012},
+	doi = {10.48550/arXiv.alg-geom/9506012},
+	abstract = {A criterion for a functor between derived categories of coherent sheaves to be full and faithful is given. A semiorthogonal decomposition for the derived category of coherent sheaves on the intersection of two even dimensional quadrics is obtained. The behaviour of derived categories with respect to birational transformations is investigated. A theorem about reconstruction of a variety from the derived category of coherent sheaves is proved.},
+	urldate = {2024-04-18},
+	publisher = {arXiv},
+	author = {Bondal, A. and Orlov, D.},
+	month = jun,
+	year = {1995},
+	note = {arXiv:alg-geom/9506012},
+	keywords = {Mathematics - Algebraic Geometry},
+}
+
