Complete Knorrer periodicity proof

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -112,6 +112,17 @@
 	pages = {133--141},
 }
 
+@article {kuznetsov_hpd_2005,
+    shorthand = {Kuz05},
+    author = {Kuznetsov, Alexander},
+    title = {Homological projective duality},
+    journal = {Publ. Math. Inst. Hautes \'{E}tudes Sci.},
+    fjournal = {Publications Math\'{e}matiques. Institut de Hautes \'{E}tudes Scientifiques},
+    number = {105},
+    year = {2007},
+    pages = {157--220},
+}
+
 
 
 
