--- a/commands.tex
+++ b/commands.tex
@@ -91,6 +91,7 @@
 \newcommand{\lperp}[1]{\prescript{\perp}{}{#1}} % left orthogonal
 \DeclareMathOperator{\Spec}{Spec}
 \DeclareMathOperator{\Proj}{Proj}
+\DeclareMathOperator{\Bl}{Bl}
 \DeclareMathOperator{\Pic}{Pic}
 \DeclareMathOperator{\Coh}{Coh}
 \DeclareMathOperator{\QCoh}{QCoh}
