--- a/bibliography.bib
+++ b/bibliography.bib
@@ -6,6 +6,7 @@
     series = {Oxford Mathematical Monographs},
     year = {2006},
 }
+
 @book{Weibel,
     shorthand = {Weib},
     author = {Weibel, Charles A.},
@@ -24,7 +25,6 @@
     year = {2010},
 }
 
-
 @book{Hartshorne,
     shorthand = {Har},
     author = {Hartshorne, Robin},
@@ -35,100 +35,6 @@
     year = {1977},
 }
 
-@article{OrlovSingularities,
-    shorthand = {Orl04},
-    author = {Orlov, D. O.},
-    title = {Triangulated categories of singularities and {D}-branes in {L}andau-{G}inzburg models},
-    journal = {Tr. Mat. Inst. Steklova},
-    volume = {246},
-    year = {2004},
-    pages = {240--262},
-}
-@article{OrlovKnorrer,
-    shorthand = {Orl06},
-    author = {Orlov, D. O.},
-    title = {Triangulated categories of singularities, and equivalences between {L}andau-{G}inzburg models},
-    journal = {Mat. Sb.},
-    volume = {197},
-    year = {2006},
-    number = {12},
-    pages = {117--132},
-}
-@incollection{OrlovTheorem,
-    shorthand = {Orl09},
-    author = {Orlov, Dmitri},
-    title = {Derived categories of coherent sheaves and triangulated categories of singularities},
-    booktitle = {Algebra, arithmetic, and geometry: in honor of {Y}u. {I}. {M}anin. {V}ol. {II}},
-    series = {Progr. Math.},
-    volume = {270},
-    pages = {503--531},
-    publisher = {Birkh\"{a}user Boston, Boston, MA},
-    year = {2009},
-}
-@article{Shipman,
-    shorthand = {Ship12},
-    author = {Shipman, Ian},
-    title = {A geometric approach to {O}rlov's theorem},
-    journal = {Compos. Math.},
-    volume = {148},
-    year = {2012},
-    number = {5},
-    pages = {1365--1389},
-}
-@article{Eisenbud,
-    shorthand = {Eis80},
-    author = {Eisenbud, David},
-    title = {Homological algebra on a complete intersection, with an application to group representations},
-    journal = {Trans. Amer. Math. Soc.},
-    volume = {260},
-    year = {1980},
-    number = {1},
-    pages = {35--64},
-}
-@article{Ed,
-    shorthand = {Ed11},
-    author = {Segal, Ed},
-    title = {Equivalence between {GIT} quotients of {L}andau-{G}inzburg {B}-models},
-    journal = {Comm. Math. Phys.},
-    volume = {304},
-    year = {2011},
-    number = {2},
-    pages = {411--432},
-}
-
-@article{orlov_projective_1993,
-    shorthand = {Orl93},
-	title = {PROJECTIVE BUNDLES, MONOIDAL TRANSFORMATIONS, AND DERIVED CATEGORIES OF COHERENT SHEAVES},
-	volume = {41},
-	issn = {1064-5632},
-	url = {https://iopscience.iop.org/article/10.1070/IM1993v041n01ABEH002182},
-	doi = {10.1070/IM1993v041n01ABEH002182},
-	number = {1},
-	urldate = {2024-04-16},
-	journal = {Russian Academy of Sciences. Izvestiya Mathematics},
-	author = {Orlov, D O},
-	month = feb,
-	year = {1993},
-	pages = {133--141},
-}
-
-@article {kuznetsov_hpd_2005,
-    shorthand = {Kuz05},
-    author = {Kuznetsov, Alexander},
-    title = {Homological projective duality},
-    journal = {Publ. Math. Inst. Hautes \'{E}tudes Sci.},
-    fjournal = {Publications Math\'{e}matiques. Institut de Hautes \'{E}tudes Scientifiques},
-    number = {105},
-    year = {2007},
-    pages = {157--220},
-}
-
-
-
-
-
-
-
 @book{huybrechts_geometry_2023,
     shorthand = {Huy23},
 	edition = {1},
@@ -136,7 +42,6 @@
 	copyright = {https://www.cambridge.org/core/terms},
 	isbn = {9781009280020 9781009280006},
 	url = {https://www.cambridge.org/core/product/identifier/9781009280020/type/book},
-	abstract = {Cubic hypersurfaces are described by almost the simplest possible polynomial equations, yet their behaviour is rich enough to demonstrate many of the central challenges in algebraic geometry. With exercises and detailed references to the wider literature, this thorough text introduces cubic hypersurfaces and all the techniques needed to study them. The book starts by laying the foundations for the study of cubic hypersurfaces and of many other algebraic varieties, covering cohomology and Hodge theory of hypersurfaces, moduli spaces of those and Fano varieties of linear subspaces contained in hypersurfaces. The next three chapters examine the general machinery applied to cubic hypersurfaces of dimension two, three, and four. Finally, the author looks at cubic hypersurfaces from a categorical point of view and describes motivic features. Based on the author's lecture courses, this is an ideal text for graduate students as well as an invaluable reference for researchers in algebraic geometry.},
 	urldate = {2024-04-15},
 	publisher = {Cambridge University Press},
 	author = {Huybrechts, Daniel},
@@ -161,6 +66,109 @@
 	doi = {10.1007/978-1-4614-1809-2},
 }
 
+@book{gelfand_methods_2003,
+    shorthand = {GelMan},
+	address = {Berlin, Heidelberg},
+	series = {Springer {Monographs} in {Mathematics}},
+	title = {Methods of {Homological} {Algebra}},
+	copyright = {http://www.springer.com/tdm},
+	isbn = {9783642078132 9783662124925},
+	url = {http://link.springer.com/10.1007/978-3-662-12492-5},
+	urldate = {2024-04-17},
+	publisher = {Springer},
+	author = {Gelfand, Sergei I. and Manin, Yuri I.},
+	year = {2003},
+	doi = {10.1007/978-3-662-12492-5},
+}
+
+@article{OrlovSingularities,
+    shorthand = {Orl04},
+    author = {Orlov, D. O.},
+    title = {Triangulated categories of singularities and {D}-branes in {L}andau-{G}inzburg models},
+    journal = {Tr. Mat. Inst. Steklova},
+    volume = {246},
+    year = {2004},
+    pages = {240--262},
+}
+
+@article{OrlovKnorrer,
+    shorthand = {Orl06},
+    author = {Orlov, D. O.},
+    title = {Triangulated categories of singularities, and equivalences between {L}andau-{G}inzburg models},
+    journal = {Mat. Sb.},
+    volume = {197},
+    year = {2006},
+    number = {12},
+    pages = {117--132},
+}
+
+@incollection{OrlovTheorem,
+    shorthand = {Orl09},
+    author = {Orlov, Dmitri},
+    title = {Derived categories of coherent sheaves and triangulated categories of singularities},
+    booktitle = {Algebra, arithmetic, and geometry: in honor of {Y}u. {I}. {M}anin. {V}ol. {II}},
+    series = {Progr. Math.},
+    volume = {270},
+    pages = {503--531},
+    publisher = {Birkh\"{a}user Boston, Boston, MA},
+    year = {2009},
+}
+
+@article{Shipman,
+    shorthand = {Ship12},
+    author = {Shipman, Ian},
+    title = {A geometric approach to {O}rlov's theorem},
+    journal = {Compos. Math.},
+    volume = {148},
+    year = {2012},
+    number = {5},
+    pages = {1365--1389},
+}
+
+@article{Eisenbud,
+    shorthand = {Eis80},
+    author = {Eisenbud, David},
+    title = {Homological algebra on a complete intersection, with an application to group representations},
+    journal = {Trans. Amer. Math. Soc.},
+    volume = {260},
+    year = {1980},
+    number = {1},
+    pages = {35--64},
+}
+
+@article{Ed,
+    shorthand = {Ed11},
+    author = {Segal, Ed},
+    title = {Equivalence between {GIT} quotients of {L}andau-{G}inzburg {B}-models},
+    journal = {Comm. Math. Phys.},
+    volume = {304},
+    year = {2011},
+    number = {2},
+    pages = {411--432},
+}
+
+@article{orlov_projective_1993,
+    shorthand = {Orl93},
+    author = {Orlov, D. O.},
+    title = {Projective bundles, monoidal transformations, and derived categories of coherent sheaves},
+    journal = {Izv. Ross. Akad. Nauk Ser. Mat.},
+    volume = {56},
+    year = {1992},
+    number = {4},
+    pages = {852--862},
+}
+
+@article{kuznetsov_hpd_2005,
+    shorthand = {Kuz05},
+    author = {Kuznetsov, Alexander},
+    title = {Homological projective duality},
+    journal = {Publ. Math. Inst. Hautes \'{E}tudes Sci.},
+    fjournal = {Publications Math\'{e}matiques. Institut de Hautes \'{E}tudes Scientifiques},
+    number = {105},
+    year = {2007},
+    pages = {157--220},
+}
+
 @article{hassett_special_2000,
     shorthand = {Hass00},
 	title = {Special {Cubic} {Fourfolds}},
@@ -179,6 +187,7 @@
 	keywords = {K3 surfaces, Noether-Lefschetz loci, period domains.},
 	pages = {1--23},
 }
+
 @article{voisin_theoreme_2008,
     shorthand = {Voi86},
 	title = {Théorème de {Torelli} pour les cubiques de P5},
@@ -230,17 +239,15 @@
 	pages = {249--291},
 }
 
-@misc{bernardara_semiorthogonal_2005,
-    shorthand = {Ber05},
-	title = {A semiorthogonal decomposition for {Brauer} {Severi} schemes},
-	url = {http://arxiv.org/abs/math/0511497},
-	abstract = {A semiorthogonal decomposition for the bounded derived category (the category of perfect complexes in a non smooth case) of coherent sheaves on a Brauer Severi scheme is given. It relies on bounded derived categories (categories of perfect complexes in a non smooth case) of suitably twisted coherent sheaves on the base.},
-	urldate = {2024-04-15},
-	publisher = {arXiv},
-	author = {Bernardara, Marcello},
-	month = nov,
-	year = {2005},
-	keywords = {Mathematics - Algebraic Geometry, Mathematics - Category Theory, 14F05, 14F22, 18E30},
+@article{bernardara_semiorthogonal_2005,
+    shorthand = {Ber09},
+    author = {Bernardara, Marcello},
+    title = {A semiorthogonal decomposition for {B}rauer-{S}everi schemes},
+    journal = {Math. Nachr.},
+    volume = {282},
+    year = {2009},
+    number = {10},
+    pages = {1406--1413},
 }
 
 @article{huybrechts_k3_2023,
@@ -292,7 +299,6 @@
 	pages = {67--104},
 }
 
-
 @article{coates_git_walls,
 author = {Coates, Tom},
 title = {WALL-CROSSINGS IN TORIC GROMOV–WITTEN THEORY II:
@@ -303,16 +309,18 @@ year = {},
 note = {(Accessed on 04/16/2024)}
 }
 
-@misc{halpernleistner2016autoequivalences,
-      title={Autoequivalences of derived categories via geometric invariant theory}, 
-      author={Daniel Halpern-Leistner and Ian Shipman},
-      year={2016},
-      eprint={1303.5531},
-      archivePrefix={arXiv},
-      primaryClass={math.AG}
+@article{halpernleistner2016autoequivalences,
+    shorthand = {HalpShip16},
+    title={Autoequivalences of derived categories via geometric invariant theory}, 
+    author = {Halpern-Leistner, Daniel and Shipman, Ian},
+    journal = {Adv. Math.},
+    volume = {303},
+    year = {2016},
+    pages = {1264--1299},
 }
 
 @article{Kite_2022,
+   shorthand={EdKite22},
    title={Discriminants and Semi-orthogonal Decompositions},
    volume={390},
    ISSN={1432-0916},
@@ -323,10 +331,11 @@ note = {(Accessed on 04/16/2024)}
    publisher={Springer Science and Business Media LLC},
    author={Kite, Alex and Segal, Ed},
    year={2022},
-   month=feb, pages={907–931} }
-
+   month=feb, pages={907–931}
+}
 
 @misc{ballard2014variation,
+      shorthand={BFK14},
       title={Variation of geometric invariant theory quotients and derived categories}, 
       author={Matthew Ballard and David Favero and Ludmil Katzarkov},
       year={2014},
@@ -336,6 +345,7 @@ note = {(Accessed on 04/16/2024)}
 }
 
 @misc{halpernleistner2014derived,
+      shorthand={Halp14},
       title={The derived category of a GIT quotient}, 
       author={Daniel Halpern-Leistner},
       year={2014},
@@ -354,59 +364,13 @@ note = {(Accessed on 04/16/2024)}
 }
 
 @misc{Beilinson1978,
+      shorthand={Beil78},
       title={Coherent sheaves on Pn and problems of linear algebra}, 
       author={Beilinson, A. A.},
       year={1978},
    url={https://doi.org/10.1007/BF01681436},
    DOI={10.1007/BF01681436},
    journal={Functional Analysis and Its Applications},
-   }
-
-
-@book{gelfand_methods_2003,
-    shorthand = {GelMan},
-	address = {Berlin, Heidelberg},
-	series = {Springer {Monographs} in {Mathematics}},
-	title = {Methods of {Homological} {Algebra}},
-	copyright = {http://www.springer.com/tdm},
-	isbn = {9783642078132 9783662124925},
-	url = {http://link.springer.com/10.1007/978-3-662-12492-5},
-	urldate = {2024-04-17},
-	publisher = {Springer},
-	author = {Gelfand, Sergei I. and Manin, Yuri I.},
-	year = {2003},
-	doi = {10.1007/978-3-662-12492-5},
-	keywords = {
-                                    
-                                        
-                                            Cohomology
-                                        
-                                    
-                                , 
-                                    
-                                        
-                                            Homological algebra
-                                        
-                                    
-                                , 
-                                    
-                                        
-                                            Sheaf cohomology
-                                        
-                                    
-                                , 
-                                    
-                                        
-                                            category theory
-                                        
-                                    
-                                , 
-                                    
-                                        
-                                            homotopical algebra
-                                        
-                                    
-                                },
 }
 
 @article{calabrese_derived_2016,
@@ -426,15 +390,13 @@ note = {(Accessed on 04/16/2024)}
 	pages = {155--172},
 }
 
-@article{CaldararuThesis,
+@phdthesis{CaldararuThesis,
    shorthand = {Cal00},
    title = {Derived categories of twisted sheaves on a Calabi-Yau manifold},
    author = {Caldararu, A.H.},
-
-
-
+   year = {2000},
+   school = {Cornell University},
 }
-
 
 @article{bridgeland_equivalences_1999,
     shorthand = {Bri99},
@@ -468,4 +430,3 @@ note = {(Accessed on 04/16/2024)}
 	note = {arXiv:alg-geom/9506012},
 	keywords = {Mathematics - Algebraic Geometry},
 }
-
