Added Window Shift

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -283,6 +283,7 @@
 
 
 @article{coates_git_walls,
+shorthand = {Coa},
 author = {Coates, Tom},
 title = {WALL-CROSSINGS IN TORIC GROMOV–WITTEN THEORY II:
 LOCAL EXAMPLES},
@@ -293,6 +294,7 @@ note = {(Accessed on 04/16/2024)}
 }
 
 @misc{halpernleistner2016autoequivalences,
+shorthand = {HS},
       title={Autoequivalences of derived categories via geometric invariant theory}, 
       author={Daniel Halpern-Leistner and Ian Shipman},
       year={2016},
@@ -302,6 +304,7 @@ note = {(Accessed on 04/16/2024)}
 }
 
 @article{Kite_2022,
+	shorthand = {KS},
    title={Discriminants and Semi-orthogonal Decompositions},
    volume={390},
    ISSN={1432-0916},
@@ -316,6 +319,7 @@ note = {(Accessed on 04/16/2024)}
 
 
 @misc{ballard2014variation,
+shorthand = {BFK},
       title={Variation of geometric invariant theory quotients and derived categories}, 
       author={Matthew Ballard and David Favero and Ludmil Katzarkov},
       year={2014},
@@ -325,6 +329,7 @@ note = {(Accessed on 04/16/2024)}
 }
 
 @misc{halpernleistner2014derived,
+shorthand = {HL},
       title={The derived category of a GIT quotient}, 
       author={Daniel Halpern-Leistner},
       year={2014},
@@ -334,6 +339,7 @@ note = {(Accessed on 04/16/2024)}
 }
 
 @misc{donovan2017perverse,
+shorthand = {Don},
       title={Perverse schobers and wall crossing}, 
       author={W. Donovan},
       year={2017},
@@ -343,6 +349,7 @@ note = {(Accessed on 04/16/2024)}
 }
 
 @misc{Beilinson1978,
+shorthand = {Bei},
       title={Coherent sheaves on Pn and problems of linear algebra}, 
       author={Beilinson, A. A.},
       year={1978},
